[package]
name = "mercurial_stable_swap_n_pool_instructions"
description = "Instruction and stat to interact with the Mercurial stable swap program"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = true

[dependencies]
solana-program = "2.3.0"
thiserror = "1.0.24"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"

[lib]
crate-type = ["lib"]